MDEV-5122: "Commands out of sync", "Malformed packet" or client hang up... - When INSERT catches an error, it should not attempt to send parts of   EXPLAIN output.